2008-12-23  Badlop  <badlop@process-one.net>

	* src/odbc/odbc_queries.erl: Fix removal of private_storage of an
	account when the account is removed

	* src/mod_privacy.erl: Remove privacy lists of an account when the
	account is removed (EJAB-720)
	* src/mod_privacy_odbc.erl: Likewise

2008-12-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix send_last_published_item issue
	when running on clustered table (thanks to Vincent Barat)(EJAB-793)

2008-12-16  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fix update pubsub tables from
	ejabberd 1.x to 2.x (EJAB-817)

	* doc/guide.tex: Fix capitalization of some section titles

	* doc/guide.tex: Mention as optional Requirements: mysql, pgsql
	and pam

	* src/ejabberd_ctl.erl: Command reopen-log must also rotate
	sasl.log (thanks to Alexander Tsvyashchenko)(EJAB-711)
	* src/ejabberd_logger_h.erl: Export the function rotate_log/1
	* doc/guide.tex: Improve explanation of log files rotation

	* doc/guide.tex: Improve explanation of watchdog admins
	option: only useful for developers (EJAB-816)
	* src/ejabberd.cfg.example: Likewise

	* doc/guide.tex: Say 'higher' instead of 'newer' in requirements
	* README: Likewise

	* doc/guide.tex: Simplify example mod_muc configuration

2008-12-08  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_c2s.erl: Reduce memory consumption due to caps handling
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_caps.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: ignore unknown configuration fields
	(EJAB-762) (thanks to Jack Moffitt)

	* src/mod_pubsub/mod_pubsub.erl: fix node authorization bug (EJAB-798)
	(thanks to Brian Cully)

	* src/mod_pubsub/pubsub.hrl: remove unused pubsub_presence record

	* src/mod_pubsub/node_default.erl: remove pubsub_state record when
	unsubscribing node without affiliation (EJAB-776)

2008-12-08  Mickael Remond  <mremond@process-one.net>
